# jpoetry

./: .gitignore  Dockerfile  LICENSE  Makefile  README.MD  README.md  get_poems.py  poems.json  pyproject.toml  result.json  setup.cfg
.github/workflows/: ci.yaml
jpoetry/: __main__.py  answers.py  bot.py  config.py  image.py  model.py  poetry.py  templates.py  text.py  textpy.py  utils.py
tests/: conftest.py  test_handlers.py  test_image.py  test_poetry.py  test_text.py  test_utils.py
