[tool.poetry]
name = "jpoetry"
version = "0.1.0"
description = "Telegram Bot converting messages into Japanese poetry"
readme = "README.MD"
authors = ["Bobronium <appkiller16@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "~2.11"
pydantic = "^1.7.3"
fonttools = "^4.20.0"
Pillow = "~8.1"

pytils = "^0.3"
pymorphy2 = "^0.9"

loguru = "^0.5.3"

uvloop = "^0.15.2"

[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
pytest = "*"
mypy = "*"
black = "*"
pytest-asyncio = "*"
coverage = "*"

# flake8 plugins:
flake8-use-fstring = "*"  # enforce f-string formatting
flake8-comprehensions = "*"  # A plugin that helps you write better list/set/dict comprehensions.
flake8-bugbear = "*"  # A plugin for Flake8 finding likely bugs and design problems in your program.

# pytest plugins:
pytest-cov = "*"
pytest-mock = "*"
pytest-sugar = "*"
aresponses = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
