[project]
name = "jpoetry"
version = "0.1.0"
description = "Telegram Bot converting messages into Japanese poetry"
authors = [
    {name = "Bobronium", email = "appkiller16@gmail.com"}
]
license = {text = "MIT"}
dependencies = [
    "aiogram>=2.20,<3",
    "pydantic>=1.7.3,<2",
    "fonttools>=4.20.0,<5",
    "Pillow>=9.0.0,<10",
    "pytils>=0.3,<1",
    "pymorphy2 @ git+https://github.com/pymorphy2-fork/pymorphy2.git",
    "pymorphy2-dicts",
    "loguru>=0.5.3,<1",
    "uvloop>=0.15.2,<1",
    "freezegun>=1.2.1,<2",
    "setuptools",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mypy",
    "pytest-asyncio",
    "coverage",
    "pytest-cov",
    "pytest-mock",
    "pytest-sugar",
    "aresponses"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jpoetry"]

[tool.hatch.metadata]
allow-direct-references = true